# test_table_terra

./: .dockstore.yml  ProtBindScreen_Viewer.ipynb  analyze_screen.backup  small_demo_1_subject_proteome_dictionary.tsv  small_demo_1_subject_proteome_native_seq.tsv  small_demo_1_subject_proteome_scrambled_seq.tsv  tablet_experiment.wdl  test.json  test_analyze_mode_aml.json
WDL/Dockerfiles/: Dockerfile  environment.yml  pyproject.toml
WDL/Dockerfiles/protbindscreen/analysis/: analysis_helper.py  screen_analysis.py
WDL/Dockerfiles/protbindscreen/general/: housekeeping_helper.py
WDL/Dockerfiles/protbindscreen/submission/: submission_helper.py
WDL/Tasks/analyze_screen/: analyze_screen.wdl
WDL/Tasks/local_msa_colabfold_search/: local_msa_colabfold_search_test.wdl
WDL/Tasks/predict_with_colabfold/: predict_with_colabfold.wdl  predict_with_colabfold_locally.wdl  predict_with_colabfold_test.wdl
WDL/Tasks/prepare_fasta_files/: prepare_fasta_files.wdl
WDL/Tasks/prepare_fasta_groups/: prepare_fasta_groups.wdl
WDL/Workflows/: wdl_analyze_mode.wdl  wdl_submit_mode.wdl  wdl_submit_mode_test.wdl
WDL/tasks/prepare_fasta_files/: prepare_fasta_files.wdl
WDL_deprecated/Tasks/predict_with_colabfold/: predict_with_colabfold.wdl  predict_with_colabfold_locally.wdl
WDL_deprecated/Workflows/: wdl_analyze_mode.wdl
cromwell-executions/WriteTableExample/28cdfc4d-2152-4363-a6bd-47510c76f7cb/call-MakeNewTable/execution/: docker_cid  predictions.tsv  script  script.background  script.submit  stderr  stderr.background  stdout.background
